// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> matches snapshot 1`] = `
<div>
  <div>
    <select
      name="e2368339-2e09-4049-8fd0-2e808d9d8109"
      onChange={[MockFunction]}
      value="corporis"
    >
      <option
        key="sequi"
        value="sequi"
      >
        sequi
      </option>
      <option
        key="facilis"
        value="facilis"
      >
        facilis
      </option>
      <option
        key="corporis"
        value="corporis"
      >
        corporis
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="veritatis"
        value="veritatis"
      >
        veritatis
      </option>
      <option
        key="quidem"
        value="quidem"
      >
        quidem
      </option>
      <option
        key="praesentium"
        value="praesentium"
      >
        praesentium
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 2`] = `
<div
  className="in sunt occaecati nulla aut sunt est"
>
  <div>
    <select
      onChange={[MockFunction]}
      value="omnis"
    >
      <option
        key="itaque"
        value="itaque"
      >
        itaque
      </option>
      <option
        key="omnis"
        value="omnis"
      >
        omnis
      </option>
      <option
        key="debitis"
        value="debitis"
      >
        debitis
      </option>
      <option
        key="rem"
        value="rem"
      >
        rem
      </option>
      <option
        key="similique"
        value="similique"
      >
        similique
      </option>
      <option
        key="temporibus"
        value="temporibus"
      >
        temporibus
      </option>
      <option
        key="aliquam"
        value="aliquam"
      >
        aliquam
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 3`] = `
<div>
  <div>
    <select
      name="7bc68196-f8d1-43d3-ad97-c60ec9cfc616"
      onChange={[MockFunction]}
    >
      <option
        key="assumenda"
        value="assumenda"
      >
        assumenda
      </option>
      <option
        key="quis"
        value="quis"
      >
        quis
      </option>
      <option
        key="quae"
        value="quae"
      >
        quae
      </option>
      <option
        key="iusto"
        value="iusto"
      >
        iusto
      </option>
      <option
        key="sapiente"
        value="sapiente"
      >
        sapiente
      </option>
      <option
        key="nostrum"
        value="nostrum"
      >
        nostrum
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 4`] = `
<div
  className="ab assumenda animi non quis quis nobis"
>
  <div>
    <select
      id="4a67b9b1-ab9c-4f94-aabc-26e8a2928077"
      name="ba28c927-828a-4031-9860-d06ee101ad55"
      onChange={[MockFunction]}
      value="sint"
    >
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="autem"
        value="autem"
      >
        autem
      </option>
      <option
        key="ut"
        value="ut"
      >
        ut
      </option>
      <option
        key="ullam"
        value="ullam"
      >
        ullam
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="possimus"
        value="possimus"
      >
        possimus
      </option>
      <option
        key="sint"
        value="sint"
      >
        sint
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 5`] = `
<div
  className="expedita omnis sit vitae consequuntur non sit"
>
  <div>
    <select
      onChange={[MockFunction]}
    >
      <option
        key="ut"
        value="ut"
      >
        ut
      </option>
      <option
        key="dignissimos"
        value="dignissimos"
      >
        dignissimos
      </option>
      <option
        key="aspernatur"
        value="aspernatur"
      >
        aspernatur
      </option>
      <option
        key="voluptate"
        value="voluptate"
      >
        voluptate
      </option>
      <option
        key="voluptatem"
        value="voluptatem"
      >
        voluptatem
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="eius"
        value="eius"
      >
        eius
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 6`] = `
<div>
  <div>
    <select
      name="f67e1947-6f3c-41b3-a1d0-dbb4e0c1e361"
      onChange={[MockFunction]}
    >
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="nobis"
        value="nobis"
      >
        nobis
      </option>
      <option
        key="excepturi"
        value="excepturi"
      >
        excepturi
      </option>
      <option
        key="saepe"
        value="saepe"
      >
        saepe
      </option>
      <option
        key="autem"
        value="autem"
      >
        autem
      </option>
      <option
        key="quis"
        value="quis"
      >
        quis
      </option>
      <option
        key="molestiae"
        value="molestiae"
      >
        molestiae
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 7`] = `
<div
  className="ut distinctio molestias placeat exercitationem unde minus"
>
  <div>
    <select
      name="6fd3a9e0-61af-48f0-9fde-3b658877621f"
      onChange={[MockFunction]}
    >
      <option
        key="voluptatibus"
        value="voluptatibus"
      >
        voluptatibus
      </option>
      <option
        key="reiciendis"
        value="reiciendis"
      >
        reiciendis
      </option>
      <option
        key="ut"
        value="ut"
      >
        ut
      </option>
      <option
        key="eos"
        value="eos"
      >
        eos
      </option>
      <option
        key="commodi"
        value="commodi"
      >
        commodi
      </option>
      <option
        key="at"
        value="at"
      >
        at
      </option>
      <option
        key="impedit"
        value="impedit"
      >
        impedit
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 8`] = `
<div
  className="ea quia sunt est aut et sunt"
>
  <div>
    <select
      onChange={[MockFunction]}
      value="voluptatem"
    >
      <option
        key="ipsa"
        value="ipsa"
      >
        ipsa
      </option>
      <option
        key="odio"
        value="odio"
      >
        odio
      </option>
      <option
        key="sit"
        value="sit"
      >
        sit
      </option>
      <option
        key="laboriosam"
        value="laboriosam"
      >
        laboriosam
      </option>
      <option
        key="quis"
        value="quis"
      >
        quis
      </option>
      <option
        key="voluptatem"
        value="voluptatem"
      >
        voluptatem
      </option>
      <option
        key="quod"
        value="quod"
      >
        quod
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 9`] = `
<div>
  <div>
    <select
      id="38ee790e-d9de-4d29-835f-1a7ae53c8fe7"
      onChange={[MockFunction]}
    >
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="voluptate"
        value="voluptate"
      >
        voluptate
      </option>
      <option
        key="optio"
        value="optio"
      >
        optio
      </option>
      <option
        key="suscipit"
        value="suscipit"
      >
        suscipit
      </option>
      <option
        key="delectus"
        value="delectus"
      >
        delectus
      </option>
      <option
        key="aliquid"
        value="aliquid"
      >
        aliquid
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 10`] = `
<div>
  <div>
    <select
      id="b53e8ee5-873a-4b54-b488-945ab7610b95"
      onChange={[MockFunction]}
      value="repellat"
    >
      <option
        key="asperiores"
        value="asperiores"
      >
        asperiores
      </option>
      <option
        key="amet"
        value="amet"
      >
        amet
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="quos"
        value="quos"
      >
        quos
      </option>
      <option
        key="repellat"
        value="repellat"
      >
        repellat
      </option>
      <option
        key="distinctio"
        value="distinctio"
      >
        distinctio
      </option>
      <option
        key="libero"
        value="libero"
      >
        libero
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 11`] = `
<div>
  <div>
    <select
      name="780c6179-b731-4e8f-ab41-5dfc89bbb55d"
      onChange={[MockFunction]}
    >
      <option
        key="quisquam"
        value="quisquam"
      >
        quisquam
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="blanditiis"
        value="blanditiis"
      >
        blanditiis
      </option>
      <option
        key="qui"
        value="qui"
      >
        qui
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="a"
        value="a"
      >
        a
      </option>
      <option
        key="dolores"
        value="dolores"
      >
        dolores
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 12`] = `
<div
  className="repellendus quaerat similique autem doloribus et voluptatem"
>
  <div>
    <select
      id="66643f02-e4a5-472a-b0fa-909cdeb7d467"
      onChange={[MockFunction]}
      value="est"
    >
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="aperiam"
        value="aperiam"
      >
        aperiam
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="suscipit"
        value="suscipit"
      >
        suscipit
      </option>
      <option
        key="ipsa"
        value="ipsa"
      >
        ipsa
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 13`] = `
<div>
  <Label
    htmlFor="6db8a202-4179-4f01-8642-da8cc8612e99"
  >
    dolore aut iste eos perspiciatis eius quod
    *
  </Label>
  <div>
    <select
      id="6db8a202-4179-4f01-8642-da8cc8612e99"
      onChange={[MockFunction]}
      value="aliquid"
    >
      <option
        key="assumenda"
        value="assumenda"
      >
        assumenda
      </option>
      <option
        key="nihil"
        value="nihil"
      >
        nihil
      </option>
      <option
        key="ad"
        value="ad"
      >
        ad
      </option>
      <option
        key="ut"
        value="ut"
      >
        ut
      </option>
      <option
        key="maxime"
        value="maxime"
      >
        maxime
      </option>
      <option
        key="aliquid"
        value="aliquid"
      >
        aliquid
      </option>
      <option
        key="sint"
        value="sint"
      >
        sint
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 14`] = `
<div>
  <div>
    <select
      id="84f9398f-77b2-4214-a391-bf1cf8226b95"
      name="4f2bef25-d9a5-494d-9daa-2874f23ba253"
      onChange={[MockFunction]}
      value="sed"
    >
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="ab"
        value="ab"
      >
        ab
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="ab"
        value="ab"
      >
        ab
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="voluptas"
        value="voluptas"
      >
        voluptas
      </option>
      <option
        key="ullam"
        value="ullam"
      >
        ullam
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 15`] = `
<div>
  <div>
    <select
      onChange={[MockFunction]}
    >
      <option
        key="iure"
        value="iure"
      >
        iure
      </option>
      <option
        key="iste"
        value="iste"
      >
        iste
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="ab"
        value="ab"
      >
        ab
      </option>
      <option
        key="laborum"
        value="laborum"
      >
        laborum
      </option>
      <option
        key="sint"
        value="sint"
      >
        sint
      </option>
      <option
        key="qui"
        value="qui"
      >
        qui
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 16`] = `
<div>
  <div>
    <select
      name="74bbc9a7-c810-4b38-960f-6652aae84085"
      onChange={[MockFunction]}
      value="est"
    >
      <option
        key="laboriosam"
        value="laboriosam"
      >
        laboriosam
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="sapiente"
        value="sapiente"
      >
        sapiente
      </option>
      <option
        key="ipsa"
        value="ipsa"
      >
        ipsa
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 17`] = `
<div>
  <div>
    <select
      id="b91869a7-5319-48c5-bc97-f0345cf64a08"
      name="2e9d2a1d-5a43-4630-a0e4-fd88335c6c3a"
      onChange={[MockFunction]}
    >
      <option
        key="fuga"
        value="fuga"
      >
        fuga
      </option>
      <option
        key="adipisci"
        value="adipisci"
      >
        adipisci
      </option>
      <option
        key="saepe"
        value="saepe"
      >
        saepe
      </option>
      <option
        key="quam"
        value="quam"
      >
        quam
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="veritatis"
        value="veritatis"
      >
        veritatis
      </option>
      <option
        key="qui"
        value="qui"
      >
        qui
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 18`] = `
<div>
  <div>
    <select
      id="0e71168e-9dfd-42ab-bc8d-33c406ccfa6f"
      onChange={[MockFunction]}
      value="quia"
    >
      <option
        key="ducimus"
        value="ducimus"
      >
        ducimus
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="vel"
        value="vel"
      >
        vel
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="fugit"
        value="fugit"
      >
        fugit
      </option>
      <option
        key="totam"
        value="totam"
      >
        totam
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 19`] = `
<div>
  <div>
    <select
      name="5d48ba9b-e8cb-4f9c-8d01-9dfea73f5ffe"
      onChange={[MockFunction]}
      value="consequatur"
    >
      <option
        key="adipisci"
        value="adipisci"
      >
        adipisci
      </option>
      <option
        key="ab"
        value="ab"
      >
        ab
      </option>
      <option
        key="rerum"
        value="rerum"
      >
        rerum
      </option>
      <option
        key="quos"
        value="quos"
      >
        quos
      </option>
      <option
        key="consequatur"
        value="consequatur"
      >
        consequatur
      </option>
      <option
        key="assumenda"
        value="assumenda"
      >
        assumenda
      </option>
      <option
        key="odio"
        value="odio"
      >
        odio
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 20`] = `
<div
  className="sit illo consequatur itaque vero repellendus ex"
>
  <div>
    <select
      name="15a1f952-99a4-49dd-a946-10735336ccf8"
      onChange={[MockFunction]}
      value="velit"
    >
      <option
        key="nihil"
        value="nihil"
      >
        nihil
      </option>
      <option
        key="illum"
        value="illum"
      >
        illum
      </option>
      <option
        key="ut"
        value="ut"
      >
        ut
      </option>
      <option
        key="nobis"
        value="nobis"
      >
        nobis
      </option>
      <option
        key="velit"
        value="velit"
      >
        velit
      </option>
      <option
        key="velit"
        value="velit"
      >
        velit
      </option>
      <option
        key="perspiciatis"
        value="perspiciatis"
      >
        perspiciatis
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 21`] = `
<div
  className="dolores dolore velit ipsum ratione expedita modi"
>
  <div>
    <select
      id="ee438c5d-7a89-40c8-8a28-a8c0d662fecd"
      name="073a00b2-654a-487d-8e61-b434a1b9e31e"
      onChange={[MockFunction]}
      value="quaerat"
    >
      <option
        key="voluptates"
        value="voluptates"
      >
        voluptates
      </option>
      <option
        key="similique"
        value="similique"
      >
        similique
      </option>
      <option
        key="laboriosam"
        value="laboriosam"
      >
        laboriosam
      </option>
      <option
        key="molestiae"
        value="molestiae"
      >
        molestiae
      </option>
      <option
        key="modi"
        value="modi"
      >
        modi
      </option>
      <option
        key="expedita"
        value="expedita"
      >
        expedita
      </option>
      <option
        key="quaerat"
        value="quaerat"
      >
        quaerat
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 22`] = `
<div
  className="qui sint enim ratione cupiditate cumque suscipit"
>
  <div>
    <select
      name="0493c245-b16a-43b0-a23f-5725b46c8986"
      onChange={[MockFunction]}
      value="voluptatum"
    >
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="quis"
        value="quis"
      >
        quis
      </option>
      <option
        key="voluptatum"
        value="voluptatum"
      >
        voluptatum
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="eos"
        value="eos"
      >
        eos
      </option>
      <option
        key="vero"
        value="vero"
      >
        vero
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 23`] = `
<div
  className="minus et consequatur veritatis animi autem necessitatibus"
>
  <div>
    <select
      name="62ae4d44-45ab-424e-aafa-2b79693a5c2e"
      onChange={[MockFunction]}
      value="fugiat"
    >
      <option
        key="explicabo"
        value="explicabo"
      >
        explicabo
      </option>
      <option
        key="iste"
        value="iste"
      >
        iste
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="fugiat"
        value="fugiat"
      >
        fugiat
      </option>
      <option
        key="ducimus"
        value="ducimus"
      >
        ducimus
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="sit"
        value="sit"
      >
        sit
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 24`] = `
<div
  className="reiciendis laborum enim molestias perferendis doloremque qui"
>
  <div>
    <select
      onChange={[MockFunction]}
      value="praesentium"
    >
      <option
        key="praesentium"
        value="praesentium"
      >
        praesentium
      </option>
      <option
        key="quaerat"
        value="quaerat"
      >
        quaerat
      </option>
      <option
        key="laborum"
        value="laborum"
      >
        laborum
      </option>
      <option
        key="fugit"
        value="fugit"
      >
        fugit
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="voluptatem"
        value="voluptatem"
      >
        voluptatem
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 25`] = `
<div>
  <div>
    <select
      id="62f15fad-5cb3-4995-9956-bd745eed1cd2"
      onChange={[MockFunction]}
    >
      <option
        key="quam"
        value="quam"
      >
        quam
      </option>
      <option
        key="nesciunt"
        value="nesciunt"
      >
        nesciunt
      </option>
      <option
        key="quis"
        value="quis"
      >
        quis
      </option>
      <option
        key="enim"
        value="enim"
      >
        enim
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="recusandae"
        value="recusandae"
      >
        recusandae
      </option>
      <option
        key="doloremque"
        value="doloremque"
      >
        doloremque
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 26`] = `
<div>
  <Label>
    debitis eos rerum doloribus voluptas aliquid optio
  </Label>
  <div>
    <select
      name="f4999528-e143-4053-9bd4-b10a151b416c"
      onChange={[MockFunction]}
    >
      <option
        key="neque"
        value="neque"
      >
        neque
      </option>
      <option
        key="tempore"
        value="tempore"
      >
        tempore
      </option>
      <option
        key="ipsa"
        value="ipsa"
      >
        ipsa
      </option>
      <option
        key="perspiciatis"
        value="perspiciatis"
      >
        perspiciatis
      </option>
      <option
        key="illo"
        value="illo"
      >
        illo
      </option>
      <option
        key="laudantium"
        value="laudantium"
      >
        laudantium
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 27`] = `
<div>
  <Label
    htmlFor="3a1e59ee-4a03-4fdd-90d3-07884844b68f"
  >
    mollitia tempore delectus eos sunt optio iusto
    *
  </Label>
  <div>
    <select
      id="3a1e59ee-4a03-4fdd-90d3-07884844b68f"
      name="cefa95b7-c451-4cf6-abcf-3a83a75e2046"
      onChange={[MockFunction]}
    >
      <option
        key="dolores"
        value="dolores"
      >
        dolores
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="dolor"
        value="dolor"
      >
        dolor
      </option>
      <option
        key="soluta"
        value="soluta"
      >
        soluta
      </option>
      <option
        key="aspernatur"
        value="aspernatur"
      >
        aspernatur
      </option>
      <option
        key="beatae"
        value="beatae"
      >
        beatae
      </option>
      <option
        key="qui"
        value="qui"
      >
        qui
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 28`] = `
<div
  className="quidem molestias repudiandae mollitia minus error placeat"
>
  <div>
    <select
      id="ca91d3fa-ee06-40f5-a38c-0050a617f31c"
      name="a5202c2d-4857-4b3c-aede-04b5ec714923"
      onChange={[MockFunction]}
    >
      <option
        key="libero"
        value="libero"
      >
        libero
      </option>
      <option
        key="esse"
        value="esse"
      >
        esse
      </option>
      <option
        key="inventore"
        value="inventore"
      >
        inventore
      </option>
      <option
        key="enim"
        value="enim"
      >
        enim
      </option>
      <option
        key="necessitatibus"
        value="necessitatibus"
      >
        necessitatibus
      </option>
      <option
        key="nihil"
        value="nihil"
      >
        nihil
      </option>
      <option
        key="autem"
        value="autem"
      >
        autem
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 29`] = `
<div
  className="amet suscipit sed est corporis est quos"
>
  <div>
    <select
      id="60ac57a2-6635-4633-b776-2072fed0deab"
      name="762bfca6-954f-4da8-a403-e33c3ea72b22"
      onChange={[MockFunction]}
      value="accusantium"
    >
      <option
        key="perspiciatis"
        value="perspiciatis"
      >
        perspiciatis
      </option>
      <option
        key="accusantium"
        value="accusantium"
      >
        accusantium
      </option>
      <option
        key="ducimus"
        value="ducimus"
      >
        ducimus
      </option>
      <option
        key="possimus"
        value="possimus"
      >
        possimus
      </option>
      <option
        key="omnis"
        value="omnis"
      >
        omnis
      </option>
      <option
        key="accusamus"
        value="accusamus"
      >
        accusamus
      </option>
      <option
        key="dolorum"
        value="dolorum"
      >
        dolorum
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 30`] = `
<div>
  <div>
    <select
      name="af5e0813-deba-42de-bf18-1ca66d0c46cb"
      onChange={[MockFunction]}
      value="assumenda"
    >
      <option
        key="assumenda"
        value="assumenda"
      >
        assumenda
      </option>
      <option
        key="rerum"
        value="rerum"
      >
        rerum
      </option>
      <option
        key="officiis"
        value="officiis"
      >
        officiis
      </option>
      <option
        key="cumque"
        value="cumque"
      >
        cumque
      </option>
      <option
        key="dolore"
        value="dolore"
      >
        dolore
      </option>
      <option
        key="quidem"
        value="quidem"
      >
        quidem
      </option>
      <option
        key="sunt"
        value="sunt"
      >
        sunt
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 31`] = `
<div
  className="est facilis illum id debitis ut sint"
>
  <div>
    <select
      id="0cb84201-b118-455f-9938-447c203fbd6b"
      onChange={[MockFunction]}
    >
      <option
        key="sunt"
        value="sunt"
      >
        sunt
      </option>
      <option
        key="porro"
        value="porro"
      >
        porro
      </option>
      <option
        key="et"
        value="et"
      >
        et
      </option>
      <option
        key="sed"
        value="sed"
      >
        sed
      </option>
      <option
        key="aut"
        value="aut"
      >
        aut
      </option>
      <option
        key="quia"
        value="quia"
      >
        quia
      </option>
      <option
        key="explicabo"
        value="explicabo"
      >
        explicabo
      </option>
    </select>
  </div>
</div>
`;

exports[`<Select /> matches snapshot 32`] = `
<div>
  <div>
    <select
      id="c69e7e7b-983b-410f-80b0-c68d60981224"
      onChange={[MockFunction]}
    >
      <option
        key="fugiat"
        value="fugiat"
      >
        fugiat
      </option>
      <option
        key="vero"
        value="vero"
      >
        vero
      </option>
      <option
        key="corrupti"
        value="corrupti"
      >
        corrupti
      </option>
      <option
        key="nihil"
        value="nihil"
      >
        nihil
      </option>
      <option
        key="est"
        value="est"
      >
        est
      </option>
      <option
        key="maxime"
        value="maxime"
      >
        maxime
      </option>
      <option
        key="vitae"
        value="vitae"
      >
        vitae
      </option>
    </select>
  </div>
</div>
`;
